<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:layout_margin="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/c_de2"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:background="@null"
            android:id="@+id/et_verifcode"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:hint="@string/input_6_verification_code"
            android:textColorHint="@color/et_hint_color"
            android:inputType="numberSigned"
            android:textSize="13sp"
            android:textColor="#4d4d4d"/>

        <Button
            android:layout_gravity="right|center_vertical"
            android:id="@+id/btn_getverifcode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/bg_blue_light_selector"
            android:layout_marginRight="18dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="click"
            android:text="@string/fetch_captcha"
            android:textSize="12sp"
            android:textColor="#ffffff"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/c_de2"
        />
    <TextView
        android:id="@+id/btn_veri_code_unreach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="@color/blue_text_color"
        android:text="@string/can_not_reach_verification_code_question"/>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/blue_text_color"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/next_step"
        android:textSize="13sp"
        android:textColor="@color/c_white"/>


</LinearLayout>