<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_default_avatar"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <!--<TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_user_avatar"
            android:text="user_name"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text_dim_color"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_to_be_friend"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@id/title_layout"
        android:background="@color/c_de2"/>

    <TextView
        android:id="@+id/tv_guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="31dp"
        android:textColor="@color/text_dim_color"
        android:text="@string/tap_to_speak"
        android:textSize="12sp"/>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textSize="17sp"
        android:textColor="@color/valid_clickable_color"
        android:visibility="invisible"
        android:text="00:00"/>

    <TextView
        android:id="@+id/tv_guide_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chronometer"
        android:text="@string/release_to_send"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp"
        android:textColor="@color/text_dim_color"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/iv_mic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_guide_text"
        android:src="@drawable/icon_speak"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_delete"
        android:layout_toLeftOf="@id/iv_mic_btn"
        android:layout_alignTop="@id/iv_mic_btn"
        android:layout_marginTop="30dp"
        android:layout_marginRight="42dp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/text_dim_color"
        android:layout_toLeftOf="@id/iv_mic_btn"
        android:layout_alignTop="@id/iv_mic_btn"
        android:layout_marginTop="30dp"
        android:layout_marginRight="42dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_luyin"
        android:layout_toRightOf="@id/iv_mic_btn"
        android:layout_alignTop="@id/iv_mic_btn"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="42dp"/>

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@color/text_dim_color"
        android:layout_toRightOf="@id/iv_mic_btn"
        android:layout_alignTop="@id/iv_mic_btn"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="42dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_cc_lazy_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_lazy_voice"
        android:layout_below="@id/iv_mic_btn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/valid_clickable_color"
        android:paddingBottom="20dp"
        android:textSize="12sp"/>


</RelativeLayout>