<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_last_account_display"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:layout_marginLeft="12dp"
            android:singleLine="true"
            android:text="@string/alipay_account"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/c_de2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_last_account"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:textSize="13sp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="18dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/c_de2"
                android:layout_marginLeft="50dp"/>
            <TextView
                android:id="@+id/tv_last_account_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:textSize="13sp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="18dp"/>


        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/c_de2"/>
    <!--<TextView
        android:id="@+id/tv_curr_account"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:singleLine="true"
        />-->

    <TextView
        android:id="@+id/tv_account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingLeft="10dp"
        android:text="@string/modify_account"
        android:singleLine="true"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="18dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/c_de2"/>
    <RelativeLayout
        android:clickable="true"
        android:onClick="click"
        android:id="@+id/rl_alipay_account"
        style="@style/setting_bar"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="13sp"
            android:text="@string/account"/>

        <TextView
            android:id="@+id/tv_alipay_account"
            style="@style/wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="@string/input_alipay_account"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrow_right"
            android:layout_marginRight="6dp"
            android:ems="20"
            android:ellipsize="middle"
            android:gravity="right"
            android:textSize="12sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="50dp"
        android:background="@color/c_de2"/>
    <RelativeLayout
        android:clickable="true"
        android:onClick="click"
        android:id="@+id/rl_alipay_name"
        style="@style/setting_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="13sp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tv_alipay_name"
            style="@style/wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="@string/input_alipay_account_name"
            android:drawablePadding="10dp"
            android:ems="20"
            android:ellipsize="middle"
            android:gravity="right"
            android:drawableRight="@drawable/arrow_right"
            android:layout_marginRight="6dp"
            android:textSize="12sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/c_de2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="22dp"
        android:padding="8dp"
        android:textColor="@color/text_dim_color"
        android:text="@string/alipay_account_name_is_for_certification"/>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="290dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_bg_blue"
        android:text="确定"
        android:textSize="13sp"
        android:clickable="true"
        android:onClick="click"
        android:textColor="@color/white"/>

</LinearLayout>