<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.peiwo.peiwo.activity.VerifiCodeNotReceiveActivity">

    <include layout="@layout/title_bar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/log_on_meet_problem"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/title_bar_height">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:background="@color/blue_text_color"
                android:layout_marginLeft="22dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:textColor="@color/text_normal_color"
                android:text="@string/forget_password"/>
        </LinearLayout>
        <TextView
            android:id="@+id/btn_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="49dp"
            android:textColor="@color/blue_text_color"
            android:text="@string/reset_password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="33dp">
            <TextView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:background="@color/blue_text_color"
                android:layout_marginLeft="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:textColor="@color/text_normal_color"
                android:text="@string/can_not_log_on"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#4d4d4d"
                android:text="客服电话："/>
            <TextView
                android:id="@+id/tv_call_kefu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#00b8d0"
                android:text="400-6869-520"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#4d4d4d"
                android:text="客服QQ号："/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#00b8d0"
                android:text="2737792899"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#4d4d4d"
                android:text="账号申诉邮箱："/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#00b8d0"
                android:text="shensu@raybo.com"
                />
        </LinearLayout>
    </LinearLayout>
</merge>
